--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm-aws-data.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm-aws-data.html
@@ -9,12 +9,12 @@
     </paper-input>
 
     <label for="region">Region:</label>
-    <core-dropdown-menu id="region" selected="{{data.region}}" valueattr="label"
+    <paper-dropdown-menu id="region" selected="{{data.region}}" valueattr="label"
       on-core-select="{{regionSelected}}">
       <template repeat="{{r in regions}}">
-        <core-item label="{{r}}"></core-item>
+        <paper-item label="{{r}}"></paper-item>
       </template>
-    </core-dropdown-menu>
+    </paper-dropdown-menu>
   </template>
 
   <script src="create-vm-aws-data.js"></script>
