--- a/vimmasite/vimma/static/vimma/components/schedule-editor/schedule-editor.html
+++ b/vimmasite/vimma/static/vimma/components/schedule-editor/schedule-editor.html
@@ -18,12 +18,12 @@
     </matrix-editor>
 
     TimeZone:
-    <core-dropdown-menu selected="{{editModel.timezone}}" valueattr="tzid"
+    <paper-dropdown-menu selected="{{editModel.timezone}}" valueattr="tzid"
       on-core-select="{{timezoneSelected}}">
       <template repeat="{{tz in timezones}}">
-        <core-item label="{{tz.name}}" tzid="{{tz.id}}"></core-item>
+        <paper-item label="{{tz.name}}" tzid="{{tz.id}}"></paper-item>
       </template>
-    </core-dropdown-menu>
+    </paper-dropdown-menu>
     <br>
     <input id="is_special" type="checkbox" checked="{{editModel.is_special}}">
     <label for="is_special">
