add Audit model, stop writing to status field

--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-detail.html
@@ -18,7 +18,7 @@
 
     <template id="main">
       AWS VM, vm.id {{vm.id}} / awsvm.id {{awsvm.id}}.<br>
-      Status: ‘{{awsvm.status}}’<br>
+      State: ‘{{awsvm.state}}’<br>
       Region: ‘{{awsvm.region}}’<br>
       Reservation id: ‘{{awsvm.reservation_id}}’<br>
       Instance id: ‘{{awsvm.instance_id}}’<br>
