--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -61,6 +61,10 @@
       <button disabled?="{{ajaxInProgress}}" on-click="{{destroy}}">
         Destroy
       </button>
+
+      <br>
+
+      <audit-display vmid="{{vmid}}"></audit-display>
     </template>
   </template>
 
