--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -29,6 +29,7 @@
           vimmaApiProviderDetailRoot = apiDetailRootUrl(
               '{% url "provider-detail" 0 %}'),
           vimmaApiVMConfigList = '{% url "vmconfig-list" %}',
+          vimmaApiAuditList = '{% url "audit-list" %}',
 
           vimmaEndpointCreateVM = '{% url "createVM" %}',
           vimmaEndpointPowerOnVM = '{% url "powerOnVM" %}',
