--- a/vimmasite/vimma/static/vimma/components/error-display/error-display.html
+++ b/vimmasite/vimma/static/vimma/components/error-display/error-display.html
@@ -1,13 +1,12 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<polymer-element name="error-display" attributes="text size">
+<link rel="import" href="../plain-text/plain-text.html">
+
+<polymer-element name="error-display" extends="plain-text">
   <template>
     <link rel="stylesheet" type="text/css" href="error-display.css">
 
-    <div id="box" on-click="{{toggle}}"
-      class="{{ { trims: needsTrimming } | tokenList }}"
-      title="{{ needsTrimming && collapsed ? 'Expand' : (needsTrimming && !collapsed ? 'Collapse' : '') }}"
-      >{{needsTrimming && collapsed ? trimmedText : text}}</div>
+    <shadow></shadow>
   </template>
 
   <script src="error-display.js"></script>
