--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -4,7 +4,7 @@
 
 <link rel="import" href="../schedule-list/schedule-list.html">
 <link rel="import" href="../projects-tab/projects-tab.html">
-<link rel="import" href="../vm-list/vm-list.html">
+<link rel="import" href="../vms-tab/vms-tab.html">
 <link rel="import" href="../audit-display/audit-display.html">
 
 <polymer-element name="index-elem" on-core-select="{{onCoreSelect}}">
@@ -25,7 +25,7 @@
     </template>
 
     <template if="{{selectedId == tabIds.VMS}}">
-      <vm-list></vm-list>
+      <vms-tab></vms-tab>
     </template>
 
     <template if="{{selectedId == tabIds.AUDIT}}">
