--- a/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
+++ b/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
@@ -44,7 +44,8 @@
         <button type="button" on-click="{{showMore}}">Show more</button>
       </template>
       <br>
-      Showing {{shownAuditItems.length}} of {{allAuditItems.length}}.
+      Showing {{shownAuditItems.length}} of {{allAuditItems.length}}
+      audit items.
     </template>
   </template>
 
