add AWS security group: create & delete with VM

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm-aws-data.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm-aws-data.html
@@ -5,7 +5,7 @@
 <polymer-element name="create-vm-aws-data" attributes="data">
   <template>
     <paper-input label="Name (VM Tag)" floatingLabel="true"
-      value="{{data.nameTag}}">
+      value="{{data.name_tag}}">
     </paper-input>
 
     <label for="region">Region:</label>
