fix vm-list not shown in project view

--- a/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
+++ b/vimmasite/vimma/static/vimma/components/project-detail/project-detail.html
@@ -57,7 +57,7 @@
     <template id="vm-list">
       Showing {{vms.length}} VMs.
 
-      <vm-list vmids="{{vmids}}"></vm-list>
+      <vm-list vmids="{{vmIds}}"></vm-list>
     </template>
   </template>
 
