rename AWS field name_tag → name

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm-aws-data.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm-aws-data.html
@@ -4,8 +4,7 @@
 
 <polymer-element name="create-vm-aws-data" attributes="data">
   <template>
-    <paper-input label="Name (VM Tag)" floatingLabel="true"
-      value="{{data.name_tag}}">
+    <paper-input label="Name" floatingLabel="true" value="{{data.name}}">
     </paper-input>
 
     <label for="region">Region:</label>
