minor: show some AWS VM fields in the UI

--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-detail.html
@@ -17,11 +17,12 @@
     </template>
 
     <template id="main">
-      AWS VM, vm.id {{vm.id}} / awsvm.id {{awsvm.id}}.<br>
+      AWS VM ‘{{awsvm.name}}’.<br>
       State: ‘{{awsvm.state}}’<br>
       Region: ‘{{awsvm.region}}’<br>
       Reservation id: ‘{{awsvm.reservation_id}}’<br>
       Instance id: ‘{{awsvm.instance_id}}’<br>
+      Security Group id: ‘{{awsvm.security_group_id}}’<br>
     </template>
   </template>
 
