helper labels in schedule editor (show day and time interval)

--- a/vimmasite/vimma/static/vimma/components/schedule-editor/matrix-editor.html
+++ b/vimmasite/vimma/static/vimma/components/schedule-editor/matrix-editor.html
@@ -1,28 +1,38 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<polymer-element name="matrix-editor" attributes="matrix disabled">
+<polymer-element name="matrix-editor"
+  attributes="matrix rowLabels colLabels disabled">
   <template>
     <link rel="stylesheet" type="text/css" href="matrix-editor.css">
 
-    <table id="matrix">
-      <template repeat="{{rowData, row in matrix}}">
+    <table id="matrix" on-mouseleave="{{resetHelpRowCol}}">
+      <tbody>
+        <template repeat="{{rowData, row in matrix}}">
+          <tr>
+            <template repeat="{{val, col in rowData}}">
+              <!--
+                using mouseover, which fires on every move, because mouseEnter,
+                which fires only when entering, doesn't work while dragging.
+              -->
+              <td
+                class="{{ {on: val, off: !val, dragging: cellIsHighlighted(row, col), normal: !cellIsHighlighted(row, col)} | tokenList }}"
+                on-mousedown="{{mouseDown}}"
+                on-mouseover="{{mouseOver}}"
+                on-mouseup="{{mouseUp}}"
+                row="{{row}}" col="{{col}}"
+                >
+              </td>
+            </template>
+          </tr>
+        </template>
+      </tbody>
+      <tfoot>
         <tr>
-          <template repeat="{{val, col in rowData}}">
-            <!--
-              using mouseover, which fires on every move, because mouseEnter,
-              which fires only when entering, doesn't work while dragging.
-            -->
-            <td
-              class="{{ {on: val, off: !val, dragging: cellIsHighlighted(row, col), normal: !cellIsHighlighted(row, col)} | tokenList }}"
-              on-mousedown="{{mouseDown}}"
-              on-mouseover="{{mouseOver}}"
-              on-mouseup="{{mouseUp}}"
-              row="{{row}}" col="{{col}}"
-              >
-            </td>
-          </template>
+          <td colspan="{{matrix.length ? matrix[0].length : 1}}">
+            {{rowLabels[helpRow] || '—'}} : {{colLabels[helpCol] || '—'}}
+          </td>
         </tr>
-      </template>
+      </tfoot>
     </table>
   </template>
 
