--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -36,6 +36,7 @@
           vimmaEndpointPowerOffVM = '{% url "powerOffVM" %}',
           vimmaEndpointRebootVM = '{% url "rebootVM" %}',
           vimmaEndpointDestroyVM = '{% url "destroyVM" %}',
+          vimmaEndpointOverrideSchedule = '{% url "overrideSchedule" %}',
 
           vimmaUserId = {{ user.id }},
 
