minor: set cursor: pointer on paper-tab

--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -9,6 +9,8 @@
 
 <polymer-element name="index-elem" on-core-select="{{onCoreSelect}}">
   <template>
+    <link rel="stylesheet" type="text/css" href="index-elem.css">
+
     <paper-tabs selected="0">
       <paper-tab id="{{tabIds.VMS}}">VMs</paper-tab>
       <paper-tab id="{{tabIds.PROJECTS}}">Projects</paper-tab>
