allow the user to select a custom page size for the REST API

--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -40,6 +40,9 @@
 
           vimmaUserId = {{ user.id }},
 
+          restPaginateByParam = '{{settings.REST_FRAMEWORK.PAGINATE_BY_PARAM|escapejs}}',
+          restMaxPaginateBy = {{settings.REST_FRAMEWORK.MAX_PAGINATE_BY}},
+
           _dummy_end;
     </script>
 
