--- a/vimmasite/vimma/templates/vimma/base.html
+++ b/vimmasite/vimma/templates/vimma/base.html
@@ -16,6 +16,7 @@
           vimmaApiProfileList = '{% url "profile-list" %}',
           vimmaApiProfileDetailRoot = apiDetailRootUrl(
               '{% url "profile-detail" 0 %}'),
+          vimmaApiUserList = '{% url "user-list" %}',
           vimmaApiUserDetailRoot = apiDetailRootUrl(
               '{% url "user-detail" 0 %}'),
           vimmaApiVMList = '{% url "vm-list" %}',
