tweak scripts (helpers for dev, provisioners for Vagrant)

--- a/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
+++ b/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
@@ -68,7 +68,7 @@
             <td>{{r.level}}</td>
             <td>{{r.vm || '—'}}</td>
             <td>{{getUserText(r.user)}}</td>
-            <td><plain-text text="{{text}}"></plain-text></td>
+            <td><plain-text text="{{r.text}}"></plain-text></td>
           </tr>
         </template>
       </table>
