minor: don't show loading… in <audit-display> if loading failed

--- a/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
+++ b/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
@@ -15,7 +15,7 @@
     </button>
     <br>
 
-    <template if="{{!apiResult}}">
+    <template if="{{!apiResult && ajaxInProgress}}">
       Loading…
     </template>
     <template if="{{apiResult}}">
